# convertor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_embeddings.py
.chroma/: chroma.sqlite3
.github/workflows/: ci.yml
pdf2vector/: __main__.py  cli.py
pdf2vector/core/: app.py  chunking.py  claude.py  embeddings.py  vector_store.py
src/: __init__.py  converter.py  main.py  ui.py
tests/: test_chunking.py  test_claude.py  test_converter.py  test_embeddings.py
