[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2md"
version = "0.1.0"
description = "A PDF to Markdown converter with GUI"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "markitdown>=0.1.1",
    "pdfminer.six>=20250416",
    "markdownify>=1.1.0",
    "coloredlogs>=15.0.1",
    "humanfriendly>=10.0",
]

[project.scripts]
pdf2md = "src.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/pdf2md"
Repository = "https://github.com/yourusername/pdf2md.git"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q" 